cm4all-beng-proxy (0.4) unstable; urgency=low

  * added support for transformation views
    - in the JavaScript API, mode=proxy is now deprecated
  * http-cache: fix segfault when request_headers==NULL
  * http-cache: store multiple (varying) versions of a resource

 --

cm4all-beng-proxy (0.3.9) unstable; urgency=low

  * http-client: assume keep-alive is enabled on HTTP 1.1
  * processor: use configured/session path-info for mode=child URIs

 -- Max Kellermann <mk@cm4all.com>  Tue, 27 Jan 2009 13:07:51 +0100

cm4all-beng-proxy (0.3.8) unstable; urgency=low

  * processor: pass Content-Type and Content-Language headers from
    template
  * http-client: allow chunked response body without keep-alive

 -- Max Kellermann <mk@cm4all.com>  Fri, 23 Jan 2009 13:02:42 +0100

cm4all-beng-proxy (0.3.7) unstable; urgency=low

  * istream_subst: exit the loop if state==INSERT
  * istream_iconv: check if the full buffer could be flushed
  * worker: don't reinitialize session manager during shutdown

 -- Max Kellermann <mk@cm4all.com>  Thu, 15 Jan 2009 10:39:47 +0100

cm4all-beng-proxy (0.3.6) unstable; urgency=low

  * processor: ignore closing </header>
  * widget-http: now really don't check content-type in frame parents
  * parser: skip comments
  * processor: implemented c:base="parent"
  * processor: added "c:" prefix to c:widget child elements
  * processor: renamed the "c:param" element to "c:parameter"

 -- Max Kellermann <mk@cm4all.com>  Thu, 08 Jan 2009 11:17:29 +0100

cm4all-beng-proxy (0.3.5) unstable; urgency=low

  * widget-http: don't check content-type in frame parents
  * istream-subst: allow null bytes in the input stream
  * js: added the "translate" parameter for passing values to the
    translation server
  * rewrite-uri: refuse to rewrite a frame URI without widget id

 -- Max Kellermann <mk@cm4all.com>  Mon, 05 Jan 2009 16:46:32 +0100

cm4all-beng-proxy (0.3.4) unstable; urgency=low

  * processor: added support for custom widget request headers